--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "calculadora",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/williamAraujo35/calculadora.git",
+  "homepage": "https://williamAraujo35.github.io/calculadora",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "gh-pages": "^6.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
@@ -38,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
